--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,23 @@
+body{
+    text-align: center;
+    font-family: sans-serif;
+    padding-top: 100px;
+    background-color: #70808F;
+}
+
+#d3-bar-chart{
+    display: none;
+    padding: 0 0 0 30px;
+    box-shadow: 0px 1px 16px #555;
+    border-radius: 5px;
+    background-color: #fff;
+}
+
+#title{
+    font-weight: 400;
+    margin-bottom: 0;
+}
+
 rect {
     fill: rgb(51, 173, 255);
 }
